<?xml version="1.0"?>
<package format="2">
  <name>slammy</name>
  <version>0.1.0</version>
  <description>The slammy package</description>

  <maintainer email="slammy@lesurpaul.fr">lesurp</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>visioin_opencv</depend>


  <export>

  </export>
</package>
